--- a/style.css
+++ b/style.css
@@ -77,4 +77,25 @@
     font-weight: 500;
 
 }
-
+.intro__blocks{
+  display: flex;
+  gap:21px;
+  position: absolute;
+  bottom: -29%;
+  left: 16%;
+}
+.intro__block{
+  background: #ffffff;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
+  padding: 39px 48px 39px 39px;
+}
+.intro__block p{
+  font-weight: 700;
+  font-size: 18px;
+  margin: 21px 0 15px 0;
+}
+.intro__block span{
+  font-weight: 400;
+  font-size: 18px;
+  color: #b7b7b7;
+}
