--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@
 }
 .services {
   text-transform: uppercase;
-  margin: 99px 0 99px 0;
+  margin: 99px auto;
 }
 .services h2{
   font-weight: 700;
@@ -128,4 +128,15 @@
 .services a {
   font-weight: 400;
   font-size: 15px;
+}
+.services__blocks{
+display: flex;
+gap: 20px;
+margin-top: 350px;
+
+}
+.services__blocks img{
+  height: 300px;
+  width: auto;
+
 }
