--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@
   text-transform: uppercase;
   margin: 99px auto;
 }
-.services h2{
+.services h2 {
   font-weight: 700;
   font-size: 30px;
   margin-bottom: 15px;
@@ -129,14 +129,40 @@
   font-weight: 400;
   font-size: 15px;
 }
-.services__blocks{
-display: flex;
-gap: 20px;
-margin-top: 350px;
-
+.services__blocks {
+  display: flex;
+  gap: 20px;
+  margin-top: 350px;
+  justify-content: center;
 }
-.services__blocks img{
+.services__blocks img {
   height: 300px;
   width: auto;
+ 
+}
+.services__block {
+  position: relative;
+}
+.overlay {
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  width: 100%;
+  height: 93%;
+  top: 0;
+  left: 0;
+  display: none;
+}
+.services__block:hover .overlay{
+  display: block;
+}
+.services__block:hover::before{
+  content: url("./img/plus.svg");
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
 
 }
