--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@
   margin-right: 35px;
   color: white;
 }
+.header a {
+  color: white;
+  text-decoration: none;
+}
 
 .nav__link_active {
   border-bottom: 2px solid white;
@@ -76,10 +80,10 @@
 }
 .intro__blocks {
   display: flex;
-  gap: 21px;
+  gap: 20px;
   position: absolute;
   bottom: -29%;
-  left: 10%;
+  left: 12%;
 }
 .intro__block {
   background: #ffffff;
@@ -132,13 +136,12 @@
 .services__blocks {
   display: flex;
   gap: 20px;
-  margin-top: 350px;
+  margin-top: 70px;
   justify-content: center;
 }
 .services__blocks img {
   height: 300px;
   width: auto;
- 
 }
 .services__block {
   position: relative;
@@ -147,22 +150,106 @@
   background: rgba(0, 0, 0, 0.5);
   position: absolute;
   width: 100%;
-  height: 93%;
+  height: 89%;
   top: 0;
   left: 0;
   display: none;
 }
-.services__block:hover .overlay{
+.services__block:hover .overlay {
   display: block;
 }
-.services__block:hover::before{
+.services__block:hover::before {
   content: url("./img/plus.svg");
-  width: 100px;
-  height: 100px;
+  width: 60px;
+  height: 60px;
   position: absolute;
-  top:50%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-
+}
+.services__block:hover::after {
+  content: "Нажмите, чтобы подробнее узнать информацию ";
+  width: 70%;
+  height: auto;
+  position: absolute;
+  top: 65%;
+  left: 10%;
+  color: white;
+  z-index: 2;
+}
+.about {
+  background-color: black;
+}
+.about__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 117px 0;
+}
+.about img {
+  width: 80%;
+  margin-top: 22px;
+}
+.about__info {
+  line-height: 150%;
+}
+.about__info h2 {
+  color: white !important;
+  font-weight: 700;
+  font-size: 30px;
+  width: 70%;
+  letter-spacing: 0.15em;
+  margin-bottom: 42px;
+}
+.about__info p {
+  color: #b7b7b7;
+  font-size: 15px;
+  font-weight: 700;
+  width: 70%;
+  margin-bottom: 48px;
+}
+.about__info a {
+  font-weight: 500;
+  font-size: 18px;
+  color: white;
+  text-transform: uppercase;
+}
+.process {
+  padding: 99px 0;
+  text-align: center;
+}
+.process h2 {
+  font-weight: 900;
+  font-size: 148px;
+  margin-bottom: 58px;
+}
+.process p {
+  font-weight: 600;
+  font-size: 40px;
+}
+.process__blocks {
+  margin-top: 92px;
+  display: flex;
+  gap: 33px;
+}
+.process_block {
+  background: #ffffff;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
+  line-height: 150%;
+  padding: 31px 24px 26px 30px;
+  min-width: 386px;
+  text-align: left;
+}
+.process_block p {
+  font-weight: 700;
+  font-size: 18px;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+}
+.process_block span {
+  font-weight: 400;
+  font-size: 16px;
+  color: #b7b7b7;
+  margin-top: 22px;
 }
