--- a/style.css
+++ b/style.css
@@ -81,10 +81,9 @@
 .intro__blocks {
   display: flex;
   gap: 20px;
-  position: fixed;
+  position: absolute;
   bottom: -30%;
   left: 15%;
-  z-index: 2;
  
 }
 .intro__block {
